--- a/src/components/contactbtn.astro
+++ b/src/components/contactbtn.astro
@@ -11,7 +11,7 @@ import "components/css-components/style-contactbtn.css";
       data-token="9e68ce292ba246dbba0fe928b98791f7"
       data-orgname="Same-Day-Appliance-Repair"
       onClick="HCPWidget.openModal()">
-      Book
+      Book Now!
     </button>
 
     <script
@@ -22,6 +22,6 @@ import "components/css-components/style-contactbtn.css";
   </div>
 
   <div class="contact-button-call-global">
-    <a href="tel:+14243250520">Call US: (424) 325-0520</a>
+    <a href="tel:+14243250520">(424) 325-0520</a>
   </div>
 </div>
